--- a/package.json
+++ b/package.json
@@ -1,7 +1,31 @@
 {
-  "name": "jesttutorial",
+
+  "test": "jetst --watch",
+  "start": "webpack-dev-server --progress --colors --hot --inline",
+  "dev": "npm-run-all test start",
+
+  "jest": {
+    "modulePaths": [
+      "/shared/vendor/modules"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
+      "^config$": "<rootDir>/configs/app-config.js"
+    }
+  },
+  "name": "npmpackage",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://www.theodinproject.com/paths/full-stack-ruby-on-rails/courses/javascript/lessons/battleship",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -9,12 +33,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.3.0",
-    "jest": "^27.2.4",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.0",
-    "webpack": "^5.56.1",
-    "webpack-cli": "^4.8.0"
+    "@babel/preset-env": "^7.15.8",
+    "css-loader": "^6.4.0",
+    "jest": "^27.3.1",
+    "run-all": "^1.0.1",
+    "sass": "^1.43.3",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexkrewson/battleship.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexkrewson/battleship/issues"
+  },
+  "homepage": "https://github.com/alexkrewson/battleship#readme",
+  "dependencies": {
+    "identity-obj-proxy": "^3.0.0",
+    "mathjs": "^9.5.1"
   }
 }
